# harness_and_loop_engineering

./: .env.example  .gitignore  CLAUDE.md  README.md  agent.py  episodic.py  procedural.py  pyproject.toml  semantic.py  server.py  summarizer.py  test_agent.py  test_semantic.py  test_summarizer.py
docs/: memory-backlog.md  ollama_docs.md
memory/procedural_memory/idea_enhancer/: skill.md
memory/procedural_memory/idea_rater/: skill.md
memory/procedural_memory/prompt_enhancer/: skill.md
static/: index.html
